# Shell-Agent-Prototype

./: .gitignore  README.md  agent.py  chatpanel.py  fastagent.config.yaml  few_agent.py  pyproject.toml
src/mcp_shellagent/: __init__.py  __main__.py  server.py
src/mcp_shellagent/mobaxterm_client/: tools.py
workflow/: fastagent.config.yaml
