[project]
name = "hw-mcp-shellagent"
version = "0.1.3"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.27.0",
    "keyboard>=0.13.5",
    "mcp[cli]>=1.13.1",
    "pyperclip>=1.9.0",
    "pywin32>=311",
    "requests>=2.32.5",
]

[project.scripts]
"hw-mcp-shellagent" = "mcp_shellagent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_shellagent"]
